<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="title_activity_preview">Place Preview</string>
    <string name="action_settings">Settings</string>
    <string name="view_all">View All</string>
    <string name="view_fav">View Favourites</string>
    <string name="clear_fav">Clear Favourites</string>
    <string name="view_shared">View Shared</string>
    <string name="clear_shared">Clear Shared</string>
    <string name="applist">AppList</string>
    <string name="history">History</string>
    <string name="title_activity_login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="title_activity_to_do">ToDoActivity</string>
    <string name="name">First Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="new_account">Create New Account</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="addtrip">Add Trip</string>
    <string name="viewtrip">View Trips</string>
    <string name="title_activity_trip_name">Trip Name</string>
    <string name="tripname">Trip Name</string>
    <string name="next">Continue</string>
    <string name="title_activity_select_place">Near By</string>
    <string name="title_activity_place_details">Place Details</string>
    <string name="title">Title</string>
    <string name="address">Adderss</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="title_activity_weather">Weather </string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="add">Add</string>
    <string name="title_activity_edit_trip">Edit Trip</string>
    <string name="title_activity_view_trip">View Trip</string>
    <string name="triname">Trip Name</string>
    <string name="dateoftravel">Date Of Travel</string>
    <string name="taveldate">Date Of Travel</string>
    <string name="title_activity_tab">Tab</string>
    <string name="title_section1">My Trips</string>
    <string name="title_section2">Add Trip</string>
    <string name="title_section3">Shared Trips</string>
    <string name="title_activity_tab_view">Trip Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noshared">No Shared Trips to Show</string>
    <string name="current">Your Current Location</string>
    <string name="enter">Enter</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="facebook_app_id">928810327182972</string>
    <string name="usecurrentlocation">USE CURRENT LOCATION</string>
    <string name="askpermission">We ask for your current location so we can speed up your login and find places in your network</string>
    <string name="terms">By Using this app, you agree to Trip Planner Terms of Use and Privacy Policy</string>
    <string name="nextt">Next>></string>
    <string name="forgot">Forgot Password?</string>
    <string name="errormsg">There are no results found for this search</string>

</resources>
