<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:columnCount="2" >

        <TextView
            android:id="@+id/cityname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/tripname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:text="@string/taveldate"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/traveldate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:ems="10" />

        <Button
            android:id="@+id/add"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/bkgcolor"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/button2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/bkgcolor"
            android:text="@string/next"
            android:textSize="25sp"
            android:typeface="serif" />
    </GridLayout>

</RelativeLayout>