<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#758D75"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >
  <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/header" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_centerVertical="true"
        android:background="@drawable/edittext_bottom_bg"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="Password"
        android:padding="10dp"
        android:password="true"
        android:textColorHint="#cccccc" />

  <com.facebook.login.widget.LoginButton
      android:id="@+id/login_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/imageView1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="21dp" />

  <Button
      android:id="@+id/buttonCreateNewAccount"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/editTextPassword"
      android:layout_alignTop="@+id/buttonLogin"
      android:background="@drawable/button_default_bg"
      android:text="@string/new_account"
      android:textColor="#E60000"
      android:textSize="15sp"
      android:typeface="serif" />

  <EditText
      android:id="@+id/editTextEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/editTextPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="14dp"
      android:background="@drawable/edittext_top_bg"
      android:drawableLeft="@drawable/email"
      android:ems="10"
      android:hint="Email"
      android:inputType="textEmailAddress"
      android:padding="10dp"
      android:textColorHint="#cccccc" >

      <requestFocus />
  </EditText>

  <Button
      android:id="@+id/buttonLogin"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/editTextPassword"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="38dp"
      android:layout_weight="3.50"
      android:background="@drawable/button_default_bg"
      android:text="@string/login"
      android:textSize="15sp"
      android:typeface="serif" />

  <TextView
      android:id="@+id/forgot"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editTextPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="35dp"
      android:text="@string/forgot" />

</RelativeLayout>