<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2C2D1"
    tools:context="com.example.group1a_hw05.AddTripFragment" >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/cityname1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/tripname"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameoftraveltrip"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_default_bg"
                android:ems="10"
                android:hint="Trip Name"
                android:layout_marginLeft="41dp"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cityname1"
                android:layout_below="@+id/nameoftraveltrip"
                android:text="@string/taveldate"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/travelingdate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@drawable/edittext_default_bg"
                android:ems="10"
                android:hint="Travel Date"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/nexteditbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/travelingdate"
                android:text="@string/nextt"
                android:textColor="#003300"
                android:textSize="15sp"
                android:layout_marginLeft="270dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>